# foteli

./: CMakeLists.txt  README.md  foteli.cc  foteli.h  main.cc
cmake/: FoteliConfig.cmake.in
